--- a/VerbannteAutoren/about.html
+++ b/VerbannteAutoren/about.html
@@ -17,7 +17,7 @@
             <li>Die Literatur jüdischer Autoren, gleichviel welcher Gebiete.</li>
         <li> Die Gesellschafts- und Unterhaltungsliteratur, in der das Leben und die Lebensziele auf dem Grunde einer bürgerlichen oder feudalen Lebensauffassung in oberflächlicher, unwahrer und süßlicher Weise dargestellt werden.</li>
             <li>Der nationalistische, patriotische Kitsch in der Literatur (P.O. Höcker!).</li>
-
+        </ol>
 </div>
     <h2>Bücherverbot der SS</h2>
     <div>Am 9. Juni 1941 gab das Reichssicherheitshauptamt (die ideologische Abteilung der SS zur „Bekämpfung der Gegner der nationalsozialistischen Weltanschauung“ unter der Leitung des Reichsführers-SS Heinrich Himmler) einen Erlass heraus, nach dem „Druckschriften, die in die Liste des schädlichen und unerwünschten Schrifttums eingereiht worden sind“, verboten wurden. Publiziert wurde dieser Erlass nur im „Befehlsblatt des Chefs der Sicherheitspolizei und des SD“. Bei den über 300 Titeln handelt es sich vorwiegend um religiöse, philosophische, teilweise auch metaphysische und oft auf den ersten Blick banale Titel. Die Gestapo beschlagnahmte bis zum Februar 1945 Bücher wie Das Verbrechen als Krankheit von Georg Bonne (1927), Der Hergott im Schützengraben von Max Biber oder Heilkräuter im Dienste der Schönheit. So gut wie alle Autoren der Liste sind vergessen, ihre Werke sind vielfach nicht einmal im Verzeichnis der Schriften, die 1933-1945 nicht angezeigt werden durften (Hrsg. Deutsche Bücherei Leipzig) aufgenommen. Dass Heinrich Himmler – anders als oft angenommen – eine aktive Rolle in der NS-Literaturpolitik spielte, belegt die Präambel der „Liste des schädlichen und unerwünschten Schrifttums“, in der Himmler mit einer Zensurvollmacht ausgestattet wurde und neben den Verboten, die Joseph Goebbels als Präsident der „Reichskulturkammer“ erteilte, ein „zusätzliches Verbot“ erteilen konnte.</div>
@@ -27,5 +27,5 @@
     <div>
     </div>
 
-<div>Quelle: Wikipedia, http://de.wikipedia.org/wiki/Liste_verbotener_Autoren_w%C3%A4hrend_der_Zeit_des_Nationalsozialismus; Bild: </div>
+<div>Quelle: Wikipedia, http://de.wikipedia.org/wiki/Liste_verbotener_Autoren_w%C3%A4hrend_der_Zeit_des_Nationalsozialismus; Bild: Bundesarchiv http://commons.wikimedia.org/wiki/File:Bundesarchiv_Bild_183-B0527-0001-776,_Berlin,_B%C3%BCcherverbrennung.jpg?uselang=de</div>
 </html>
