--- a/VerbannteAutoren/impressum.html
+++ b/VerbannteAutoren/impressum.html
@@ -1,16 +1,20 @@
 <html>
     <body>
-        <h2>Idee</h2>
-        <div>Die App ist entstanden im Rahmen des Kulturhackathon “Coding da Vinci” der wikimedia blabla.Ziel ist es, die seit 20xx verfügbare Liste der Verbotenen Werke und Autoren durch Informationen anzureichern </div>
         <h2>Umsetzung</h2>
-        <div>c) 2014 Anna Neovesky, Digitale AkademieJulius Peinelt, Mr. Fridge Software GbR</div>
-        <h2>Copyright</h2>
+        <div>© 2014 Anna Neovesky, <a href="http://www.digitale-akademie.de/">Digitale Akademie</a>;
+Julius Peinelt, <a href="http://mr-fridge.de/">Mr. Fridge Software GbR</a><br/><br/>
+    Die App ist entstanden im Rahmen des Kulturhackathon <a href="http://codingdavinci.de">“Coding da Vinci”</a>.
+        </div>
+        
+        <h2>Daten</h2>
         <div>
             <ul>
-                <li>Liste des verbotenen Schrifttums</li>                <li>Informationen aus der Wikipedia</li>
+                <li><a href="http://daten.berlin.de/datensaetze/liste-der-verbannten-b%C3%BCcher">Liste des verbotenen Schrifttums</a>, veröffentlicht von BerlinOnline Stadtportal GmbH &amp; Co. KG (CC BY)</li>
+                <li>Biografische Informationen, Hintergrundinformationen, Bilder: Wikipedia (CC BY-SA 3.0)</li>
+                <li><a href="http://www.dnb.de/DE/Standardisierung/GND/gnd_node.html">Gemeinsame Normdatei</a> der Deutschen Nationalbibliothek (CC O)</li>
             </ul>
-            Lizenzierungstypen klären und Gesamtlizenz für App wählen        </div>
-        <h2>Danksagungen</h2>
+        </div>
+        <h2>Danke an</h2>
         <div>Marjam Mahmoodzada, Gabriel Reimers, Torsten Schrade</div>
     </body>
 </html>
