--- a/VerbannteAutoren/about.html
+++ b/VerbannteAutoren/about.html
@@ -1,4 +1,7 @@
 <html>
+    <head>
+        <link rel="stylesheet" type="text/css" href="main.css">
+    </head>
     <body>
     <h1>Liste verbotener Autoren während der Zeit des Nationalsozialismus</h1>
     <div>Im Mai und Juni 1933, im ersten Jahr der nationalsozialistischen Regierungszeit, wurden in vielen deutschen Städten in einer groß angelegten studentischen „Aktion wider den undeutschen Geist“ demonstrativ öffentliche Bücherverbrennungen durchgeführt. Die Auswahl der „verbrennungswürdigen“ Werke basierte auf sogenannten „schwarzen Listen“, die im März 1933 im Auftrag des Propagandaministeriums erstellt wurden und die die Grundlage für die Plünderungen von Büchereien und Buchhandlungen bildeten (siehe Liste der verbrannten Bücher 1933). Die Verfolgung und Zensur unliebsamer Autoren wurde bald nach den studentischen Bücherverbrennungen von offizieller Seite fortgesetzt. Am 13. Mai 1933 erschien im Börsenblatt für den Deutschen Buchhandel eine erste Liste von 12 bekannten deutschen Autoren, die „für das deutsche Ansehen als schädigend zu erachten“ seien.</div>
