--- a/VerbannteAutoren/impressum.html
+++ b/VerbannteAutoren/impressum.html
@@ -1,4 +1,7 @@
 <html>
+    <head>
+        <link rel="stylesheet" type="text/css" href="main.css">
+            </head>
     <body>
         <h2>Umsetzung</h2>
         <div>© 2014 Anna Neovesky, <a href="http://www.digitale-akademie.de/">Digitale Akademie</a>;
