--- a/VerbannteAutoren/about.html
+++ b/VerbannteAutoren/about.html
@@ -3,7 +3,6 @@
         <link rel="stylesheet" type="text/css" href="main.css">
     </head>
     <body>
-    <h1>Liste verbotener Autoren während der Zeit des Nationalsozialismus</h1>
     <div>Im Mai und Juni 1933, im ersten Jahr der nationalsozialistischen Regierungszeit, wurden in vielen deutschen Städten in einer groß angelegten studentischen „Aktion wider den undeutschen Geist“ demonstrativ öffentliche Bücherverbrennungen durchgeführt. Die Auswahl der „verbrennungswürdigen“ Werke basierte auf sogenannten „schwarzen Listen“, die im März 1933 im Auftrag des Propagandaministeriums erstellt wurden und die die Grundlage für die Plünderungen von Büchereien und Buchhandlungen bildeten (siehe Liste der verbrannten Bücher 1933). Die Verfolgung und Zensur unliebsamer Autoren wurde bald nach den studentischen Bücherverbrennungen von offizieller Seite fortgesetzt. Am 13. Mai 1933 erschien im Börsenblatt für den Deutschen Buchhandel eine erste Liste von 12 bekannten deutschen Autoren, die „für das deutsche Ansehen als schädigend zu erachten“ seien.</div>
      <img src="buecherverbrennung.jpg"> 
     <h2>Liste des schädlichen und unerwünschten Schrifttums</h2>
@@ -25,12 +24,11 @@
 </div>
     <h2>Bücherverbot der SS</h2>
     <div>Am 9. Juni 1941 gab das Reichssicherheitshauptamt (die ideologische Abteilung der SS zur „Bekämpfung der Gegner der nationalsozialistischen Weltanschauung“ unter der Leitung des Reichsführers-SS Heinrich Himmler) einen Erlass heraus, nach dem „Druckschriften, die in die Liste des schädlichen und unerwünschten Schrifttums eingereiht worden sind“, verboten wurden. Publiziert wurde dieser Erlass nur im „Befehlsblatt des Chefs der Sicherheitspolizei und des SD“. Bei den über 300 Titeln handelt es sich vorwiegend um religiöse, philosophische, teilweise auch metaphysische und oft auf den ersten Blick banale Titel. Die Gestapo beschlagnahmte bis zum Februar 1945 Bücher wie Das Verbrechen als Krankheit von Georg Bonne (1927), Der Hergott im Schützengraben von Max Biber oder Heilkräuter im Dienste der Schönheit. So gut wie alle Autoren der Liste sind vergessen, ihre Werke sind vielfach nicht einmal im Verzeichnis der Schriften, die 1933-1945 nicht angezeigt werden durften (Hrsg. Deutsche Bücherei Leipzig) aufgenommen. Dass Heinrich Himmler – anders als oft angenommen – eine aktive Rolle in der NS-Literaturpolitik spielte, belegt die Präambel der „Liste des schädlichen und unerwünschten Schrifttums“, in der Himmler mit einer Zensurvollmacht ausgestattet wurde und neben den Verboten, die Joseph Goebbels als Präsident der „Reichskulturkammer“ erteilte, ein „zusätzliches Verbot“ erteilen konnte.</div>
-    <h2>Quellen</h2>
-    <div></div>
     <h2>Literatur</h2>
     <div>
     </div>
+    <h2>Quelle</h2>
 
-<div>Quelle: Wikipedia, http://de.wikipedia.org/wiki/Liste_verbotener_Autoren_w%C3%A4hrend_der_Zeit_des_Nationalsozialismus; Bild: Bundesarchiv http://commons.wikimedia.org/wiki/File:Bundesarchiv_Bild_183-B0527-0001-776,_Berlin,_B%C3%BCcherverbrennung.jpg?uselang=de</div>
+<div><a href="http://de.wikipedia.org/wiki/Liste_verbotener_Autoren_w%C3%A4hrend_der_Zeit_des_Nationalsozialismus">Wikipedia</a>; Bild: <a href="http://commons.wikimedia.org/wiki/File:Bundesarchiv_Bild_183-B0527-0001-776,_Berlin,_B%C3%BCcherverbrennung.jpg?uselang=de">Wikimcommons</a> / Bundesarchiv, Bild 183-B0527-0001-776 / CC-BY-SA</div>
 </body>
 </html>
