--- a/VerbannteAutoren/about.html
+++ b/VerbannteAutoren/about.html
@@ -29,17 +29,28 @@
     <h2>Quellen</h2>
     <div>
         <ul>
-            
-            Liste des schädlichen und unerwünschten Schrifttums, Stand vom 31. Dezember 1938 (Online unter berlin.de)
-            Liste des schädlichen und unerwünschten Schrifttums. Jahreslisten 1939–1941. unveränderter Neudruck der Ausgabe Leipzig 1938–1941, Vaduz 1979
-            Unerwuenschte Literatur in Frankreich. Ouvrages littéraires non désirables en France. 3. Auflage, Paris 1943. (online bei Gallica)
-
+            <li>Liste des schädlichen und unerwünschten Schrifttums, Stand vom 31. Dezember 1938 (Online unter <a href="http://www.berlin.de/rubrik/hauptstadt/verbannte_buecher/">berlin.de</a>)</li>
+            <li>Liste des schädlichen und unerwünschten Schrifttums. Jahreslisten 1939–1941. unveränderter Neudruck der Ausgabe Leipzig 1938–1941, Vaduz 1979</li>
+            <li>Unerwuenschte Literatur in Frankreich. Ouvrages littéraires non désirables en France. 3. Auflage, Paris 1943. (<a href="http://gallica.bnf.fr/ark:/12148/btv1b86260674">online bei Gallica</a>)</li>
         </ul>
     </div>
     <h2>Literatur</h2>
     <div>
+        <ul>
+            <li>Dietrich Aigner: Die Indizierung „schädlichen und unerwünschten Schrifttums“ im Dritten Reich. Bibliothekar-Lehrinstitut des Landes NRW, 1968.</li>
+            <li>Hans Benecke: Eine Buchhandlung in Berlin. Erinnerung an eine schwere Zeit. Fischer Taschenbuchverlag, Frankfurt am Main 1995.</li>
+            <li>Wolfgang Berghofer (Hrsg.): Ausgewählte Texte und Biografien von Opfern der Bücherverbrennung 1933.</li>
+            <li>Achim Bonte: Bücher mit Vergangenheit. Die Universitätsbibliothek Heidelberg als Sammelstelle verfemter Literatur im „Dritten Reich“. In: Theke 2001,1, S. 45–51</li>
+            <li>Sören Flachowsky: Die Bibliothek der Berliner Universität während der Zeit des Nationalsozialismus. Logos, Berlin 2000.</li>
+            <li>Jürgen Serke: Die verbrannten Dichter. Berichte, Texte, Bilder einer Zeit. Beltz &amp; Gelberg, Weinheim / Basel 1977.</li>
+            <li>Volker Weidermann: Das Buch der verbrannten Bücher. Kiepenheuer &amp; Witsch, Köln 2008.</li>
+            <li>Edda Ziegler: Die verbrannten Dichterinnen. Schriftstellerinnen gegen den Nationalsozialismus. Artemis &amp; Winkler, Düsseldorf 2007.</li>
+            <li>Erich Kästner: Über das Verbrennen von Büchern. Atrium, Zürich 2013.</li>
+        </ul>
     </div>
+    <h2>Weblinks</h2>
+    <div><a href="http://verbrannte-und-verbannte.de/">Verbannte und Verbrannte</a><br/> Projekt entstanden im Rahmen des Kulturhackathosn Coding da Vinci</div>
     <h2>Quelle</h2>
-<div><a href="http://de.wikipedia.org/wiki/Liste_verbotener_Autoren_w%C3%A4hrend_der_Zeit_des_Nationalsozialismus">Wikipedia</a>; Bild: <a href="http://commons.wikimedia.org/wiki/File:Bundesarchiv_Bild_183-B0527-0001-776,_Berlin,_B%C3%BCcherverbrennung.jpg?uselang=de">Wikimcommons</a> / Bundesarchiv, Bild 183-B0527-0001-776 / CC-BY-SA</div>
+    <div>Text:<a href="http://de.wikipedia.org/wiki/Liste_verbotener_Autoren_w%C3%A4hrend_der_Zeit_des_Nationalsozialismus">Wikipedia</a><br/> Bild: <a href="http://commons.wikimedia.org/wiki/File:Bundesarchiv_Bild_183-B0527-0001-776,_Berlin,_B%C3%BCcherverbrennung.jpg?uselang=de">Wikimcommons</a> / Bundesarchiv, Bild 183-B0527-0001-776 / CC-BY-SA</div>
 </body>
 </html>
