Fix dark mode Change HTTP to HTTPS

--- a/Verbotene Autoren/about.html
+++ b/Verbotene Autoren/about.html
@@ -32,9 +32,9 @@
     <h2>Quellen</h2>
     <div>
         <ul>
-            <li>Liste des schädlichen und unerwünschten Schrifttums, Stand vom 31. Dezember 1938 (Online unter <a href="http://www.berlin.de/rubrik/hauptstadt/verbannte_buecher/">berlin.de</a>)</li>
+            <li>Liste des schädlichen und unerwünschten Schrifttums, Stand vom 31. Dezember 1938 (Online unter <a href="https://www.berlin.de/rubrik/hauptstadt/verbannte_buecher/">berlin.de</a>)</li>
             <li>Liste des schädlichen und unerwünschten Schrifttums. Jahreslisten 1939–1941. unveränderter Neudruck der Ausgabe Leipzig 1938–1941, Vaduz 1979</li>
-            <li>Unerwuenschte Literatur in Frankreich. Ouvrages littéraires non désirables en France. 3. Auflage, Paris 1943. (<a href="http://gallica.bnf.fr/ark:/12148/btv1b86260674">online bei Gallica</a>)</li>
+            <li>Unerwuenschte Literatur in Frankreich. Ouvrages littéraires non désirables en France. 3. Auflage, Paris 1943. (<a href="https://gallica.bnf.fr/ark:/12148/btv1b86260674">online bei Gallica</a>)</li>
         </ul>
     </div>
     <h2>Literatur</h2>
@@ -52,8 +52,8 @@
         </ul>
     </div>
     <h2>Weblinks</h2>
-    <div><a href="http://verbrannte-und-verbannte.de/">Verbannte und Verbrannte</a><br/> Projekt entstanden im Rahmen des Kulturhackathosn Coding da Vinci</div>
+    <div><a href="https://verbrannte-und-verbannte.de/">Verbannte und Verbrannte</a><br/> Projekt entstanden im Rahmen des Kulturhackathosn Coding da Vinci</div>
     <h2>Quelle</h2>
-    <div>Text:<a href="http://de.wikipedia.org/wiki/Liste_verbotener_Autoren_w%C3%A4hrend_der_Zeit_des_Nationalsozialismus">Wikipedia</a><br/> Bild: <a href="http://commons.wikimedia.org/wiki/File:Bundesarchiv_Bild_183-B0527-0001-776,_Berlin,_B%C3%BCcherverbrennung.jpg?uselang=de">Wikimcommons</a> / Bundesarchiv, Bild 183-B0527-0001-776 / CC-BY-SA</div>
+    <div>Text:<a href="https://de.wikipedia.org/wiki/Liste_verbotener_Autoren_w%C3%A4hrend_der_Zeit_des_Nationalsozialismus">Wikipedia</a><br/> Bild: <a href="https://commons.wikimedia.org/wiki/File:Bundesarchiv_Bild_183-B0527-0001-776,_Berlin,_B%C3%BCcherverbrennung.jpg?uselang=de">Wikimcommons</a> / Bundesarchiv, Bild 183-B0527-0001-776 / CC-BY-SA</div>
 </body>
 </html>
