--- a/Verbotene Autoren/about.html
+++ b/Verbotene Autoren/about.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="main.css">
-    </head>s
+    </head>
     <body>
     <div>Im Mai und Juni 1933, im ersten Jahr der nationalsozialistischen Regierungszeit, wurden in vielen deutschen Städten in einer groß angelegten studentischen „Aktion wider den undeutschen Geist“ demonstrativ öffentliche Bücherverbrennungen durchgeführt.<br/> Die Auswahl der „verbrennungswürdigen“ Werke basierte auf sogenannten „schwarzen Listen“, die im März 1933 im Auftrag des Propagandaministeriums erstellt wurden und die die Grundlage für die Plünderungen von Büchereien und Buchhandlungen bildeten.</div><br/>
         <img class="buecher" src="buecherverbrennung.png">
